<resources>
    <string name="URI">http://158.97.67.93:4000/ci/index.php/api</string>
    <string name="google_maps_key">AIzaSyAlmfsfU1lRyiFBri6znizt44y2Uz634lM</string>
    <string name="google_directions_key">AIzaSyAjkSX7UHAXF-wcvFzK--HwaklnHVugJJo</string>
    <!-- 192.168.43.192 -->
    <!-- 192.168.0.5 -->
    <!-- 10.10.192.1 -->

    <string name="year_prompt">Año</string>
    <string name="app_name">Transportaciones CICESE</string>
    <string name="contrasena">Contraseña</string>
    <string name="inicio_btn">Iniciar</string>
    <string name="btn_CICESE_user">Acceso a usuarios CICESE</string>
    <string name="textview_acceso">Ingrese los datos de acceso</string>
    <string name="transportaciones">Transportaciones</string>
    <string name="title_activity_inicio_pasajero">Inicio</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="android_studio">Usuario</string>
    <string name="android_studio_android_com">Tipo usuario</string>
    <string name="nuevo_registro">Nuevo registro</string>
    <string name="n_mero_de_empleado">Número de empleado</string>
    <string name="contrase_aChofer">Contraseña</string>
    <string name="nombre">Nombre (s)</string>
    <string name="apellido_paterno">Apellido paterno</string>
    <string name="apellido_materno">Apellido materno</string>
    <string name="tel_fono">Número de teléfono</string>
    <string name="RegistrarChoferbutton">Registrar chofer</string>
    <string name="usuario">Usuario</string>
    <string name="usuario_generado">Usuario generado</string>
    <string name="registrar_pasajero">Registrar pasajero</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="incio">Inicio</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="chat">Chat</string>
    <string name="general">General</string>
    <string name="string_ayuda">Ayuda</string>
    <string name="acerca_de">Acerca de</string>
    <string name="write_a_message">Escriba un mensaje</string>
    <string name="logout">Cerrar sesión</string>
    <string name="aceptar">Aceptar</string>
    <string name="asistente_obtenido_automaticamente">Asistente(Obtenido Automaticamente)</string>
    <string name="folio_funcion_generadora">Folio</string>
    <string name="invitado_combobox_autollenado">Invitado(ComboBox autollenado)</string>
    <string name="descripci_n">Descripción</string>
    <string name="longitud">Longitud</string>
    <string name="latitud">Latitud</string>
    <string name="hora">Hora</string>
    <string name="fecha">Fecha</string>
    <string name="generaFolio">Generar</string>
    <string name="capture_los_siguientes_datos">Capture los datos presentados a continuación</string>
    <string name="actualizar_servicios_de_esta_solicitud">Actualizar los  servicios asociados a esta solicitud</string>
    <string name="actualizar_solicitud">Actualizar solicitud</string>
    <string name="actualizar_servicio">Actualizar servicio</string>
    <string name="actualizar_todo">Actualizar todo</string>
    <string name="dar_seguimiento_a_su_solicitud">Dar seguimiento a sus servicios</string>
    <string name="consultar_sus_eventos">Consultar sus eventos</string>
    <string name="title_activity_inicio_asistentes">InicioAsistentesActivity</string>
    <string name="registar_usuarios_y_solicitudes">Registar usuarios, solicitudes y servicios</string>
    <string name="calificaci_n">Calificación</string>
    <string name="color">Color</string>
    <string name="title_activity_inicio_choferes">InicioChoferesActivity</string>
    <string name="pasajero">Pasajero</string>
    <string name="chofer">Chofer</string>
    <string name="asistente">Asistente</string>
    <string name="actualizaciones">Actualizaciones</string>
    <string name="registros">Registros</string>
    <string name="consultas">Consultas</string>
    <string name="servicios">Servicios</string>
    <string name="notificaciones_rapidas">Notificaciones rápidas</string>
    <string name="eventos">Eventos</string>
    <string name="registrar_chofer">Registrar chofer</string>
    <string name="selecccione_una_de_las_siguientes_opciones">Selecccione una de las siguientes opciones</string>
    <string name="registrar_asistente">Registrar asistente</string>
    <string name="tip">Al hacer un registro, por favor asegurese de que todos los datos sean correctos</string>
    <string name="registrar_solicitud">Registrar solicitud</string>
    <string name="tipo">Tipo</string> <!--(Sedan, Camioneta, Van,…)-->
    <string name="placas">Placas</string>
    <string name="anio">Año</string>
    <string name="marca">Marca</string> <!--(Ford, Toyota, Kia,…)-->
    <string name="model">Modelo</string> <!--(Focus, Camry, Spectra,…)-->
    <string name="datos_de_encuentro">Datos de encuentro</string>
    <string name="datos_de_destino">Datos de destino</string>
    <string name="datos_del_vehiculo">Datos del vehículo</string>
    <string name="requerido">Se requiere capturar los siguientes campos</string>
    <string name="email">Correo electrónico</string>
    <string name="username">Nombre de usuario</string>
    <string name="detalles_servicio">Detalles del servicio</string>
    <string name="estado">Estado</string>
    <string name="fum">Fecha de última \nmodificación</string>
    <string name="nombre_chofer">Nombre del chofer</string>
    <string name="bienvenido">Bienvenido a CICESE Transportaciones</string>
    <string name="como_chofer">Como chofer, a través de esta aplicación usted podrá:</string>
    <string name="int_msj">Intercambiar mensajes con su pasajero asignado y asistente</string>
    <string name="q_noti">Enviar notificaciones rápidas a pasajeros</string>
    <string name="localizacion">Enviar su localización</string>
    <string name="mayor_info">Para mayor información, favor de consultar la ayuda</string>
    <string name="como_asistente">Como asistente, a través de esta aplicación usted podrá:</string>
    <string name="int_msj_d">Intercambiar mensajes con los usuarios asociados a un servicio</string>
    <string name="update_service">Actualizar los datos de los servicios registrados</string>
    <string name="consultas_info">Realizar consultas a los servicios registrados</string>
    <string name="como_pasajero">Como pasajero, a través de esta aplicación usted podrá:</string>
    <string name="seguir_solicitud">Dar seguimiento a su solicitud</string>
    <string name="int_msj_t">Intercambiar mensajes con su chofer asignado y asistente</string>
    <string name="calendario_eventos">Consultar su calendario de eventos</string>
    <string name="rating_servicio">Calificar el servicio que se le ha brindado</string>
    <string name="popup_msg">Este campo requiere un número de 10 dígitos, por ejemplo: \n(646)1234567\ndonde los tres primeros números son la lada, éstos no se colocan entre paréntesis</string>
    <string name="popup_msg2">El formato para el correo electrónico es, por ejemplo: \nnickname@dominio.com</string>
    <string name="desc_p_chofer">Con el presente formulario podrá registrar a un usuario chofer en el sistema</string>
    <string name="desc_p_pasajero">Con el presente formulario podrá registrar a un usuario pasajero en el sistema</string>
    <string name="desc_p_asistente">Con el presente formulario podrá registrar a un usuario asistente en el sistema</string>
    <string name="desc_p_solicitud">Con el presente formulario podrá registrar una solicitud de transporte para un usuario pasajero</string>
    <string name="desc_p_solicitudup">Podrá actualizar los datos de una solicitud previamente registrado con el presente formulario</string>
    <string name="desc_p_servicio">Una vez registrada la solicitud, para ésta, con el presente formulario, podrá registrar un servicio de transporte </string>
    <string name="iramisservicios">Mis servicios</string>
    <string name="iramiseventos">Mis eventos</string>
</resources>