<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/home_icon"
            android:title="@string/incio" />
        <item
            android:id="@+id/nav_servicio"
            android:icon="@drawable/services_icon"
            android:title="Servicios" />
        <item
            android:id="@+id/nav_push"
            android:icon="@drawable/chat_icon"
            android:title="Notificaciones rápidas" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout_icon"
            android:title="@string/cerrar_sesi_n" />
    </group>

    <item android:title="@string/general">
        <menu>
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/help_icon"
                android:title="@string/string_ayuda" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/about_icon"
                android:title="@string/acerca_de" />
        </menu>
    </item>
</menu>
