<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.transporte.cicese.transportaciones_cicese.InicioChoferesActivity"
    tools:showIn="@layout/app_bar_inicio_choferes">
    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="300dp"
        android:layout_height="70dp"
        app:srcCompat="@drawable/textback"
        android:layout_marginTop="12dp"
        tools:ignore="ContentDescription"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bienvenido"
        android:textAlignment="center"
        android:textColor="@color/ColorActionBarTitle"
        android:textSize="20dp"
        android:layout_marginTop="11dp"
        android:layout_alignTop="@+id/imageView10"
        android:layout_alignEnd="@+id/imageView10"
        android:layout_toEndOf="@+id/imageView12" />


    <ViewFlipper
        android:id="@+id/flipper1"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView10"
        android:layout_marginTop="22dp"
        android:autoStart="true"
        android:flipInterval="3000"
        android:inAnimation="@android:anim/slide_in_left"
        android:outAnimation="@android:anim/slide_out_right"
        tools:ignore="UselessLeaf,UselessParent">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logocicese"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/instalaciones"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/fondocicese"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ensenada"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/mapa"
            tools:ignore="ContentDescription" />

    </ViewFlipper>


    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/imageView10"

        android:layout_alignStart="@+id/imageView10"
        android:layout_below="@+id/flipper1"
        android:layout_marginTop="24dp"
        android:text="@string/como_chofer"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView13"
        android:drawableLeft="@drawable/forma_iconp"
        android:drawablePadding="5dp"
        android:layout_below="@+id/textView9"
        android:layout_marginTop="11dp"
        android:text="@string/dar_seguimiento_a_su_solicitud"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/imageView10"
        android:layout_alignStart="@+id/textView9"
        android:drawableLeft="@drawable/forma_iconp"
        android:drawablePadding="5dp"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="2dp"
        android:text="@string/int_msj"
        tools:ignore="HardcodedText,RtlHardcoded" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView2"
        android:layout_below="@+id/textView13"
        android:drawableLeft="@drawable/forma_iconp"
        android:drawablePadding="5dp"
        android:layout_marginTop="2dp"
        android:text="@string/q_noti"
        tools:ignore="HardcodedText,RtlHardcoded"
        android:layout_alignEnd="@+id/textView13" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView14"
        android:layout_below="@+id/textView14"
        android:layout_marginTop="2dp"
        android:drawableLeft="@drawable/forma_iconp"
        android:drawablePadding="5dp"
        android:text="@string/localizacion"
        tools:ignore="HardcodedText,RtlHardcoded"
        android:layout_alignEnd="@+id/textView14" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mayor_info"
        android:textSize="10sp"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/textView15"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView2"
        android:layout_toStartOf="@+id/textView2"
        tools:ignore="ContentDescription,UnusedAttribute" />

</RelativeLayout>
